--- a/package.json
+++ b/package.json
@@ -4,7 +4,10 @@
   "scripts": {
     "dev:only": "svelte-kit dev",
     "build:only": "svelte-kit build",
+    "special": "svelte-kit dev --host 0.0.0.0",
+    "lint": "eslint --ignore-path .gitignore .",
     "preview": "svelte-kit preview",
+    "start": "sirv public --host",
     "tailwind:watch": "cross-env TAILWIND_MODE=watch cross-env NODE_ENV=development postcss src/styles/tailwind.css -o src/styles/tailwind-output.css -w",
     "tailwind:build": "cross-env TAILWIND_MODE=build cross-env NODE_ENV=production postcss src/styles/tailwind.css -o src/styles/tailwind-output.css",
     "dev": "concurrently \"yarn run dev:only\" \"yarn run tailwind:watch\"",
