--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
     "build": "svelte-kit build"
   },
   "devDependencies": {
-    "@sveltejs/kit": "next",
+    "@sveltejs/kit": "^1.0.0-next.108",
     "autoprefixer": "^10.3.4",
     "concurrently": "^6.2.1",
     "cross-env": "^7.0.3",
