--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "build": "svelte-kit build"
   },
   "devDependencies": {
+    "@sveltejs/adapter-vercel": "^1.0.0-next.31",
     "@sveltejs/kit": "^1.0.0-next.108",
     "autoprefixer": "^10.3.4",
     "concurrently": "^6.2.1",
