--- a/package.json
+++ b/package.json
@@ -28,6 +28,8 @@
   "type": "module",
   "dependencies": {
     "daisyui": "^1.14.0",
-    "uuid": "^8.3.2"
+    "file-saver": "^2.0.5",
+    "uuid": "^8.3.2",
+    "xlsx": "^0.17.3"
   }
 }
