--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
   "dependencies": {
     "daisyui": "^1.14.0",
     "file-saver": "^2.0.5",
+    "moment": "^2.29.1",
     "uuid": "^8.3.2",
     "xlsx": "^0.17.3"
   }
