--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "daisyui": "^1.14.0",
     "file-saver": "^2.0.5",
     "moment": "^2.29.1",
+    "sheetjs-style": "^0.15.8",
     "uuid": "^8.3.2",
     "xlsx": "^0.17.3"
   }
